2004-09-06  David Hansen  <david.hansen@gmx.net>

	* shimbun/sb-weeklyworldnews.el: New file.

	* shimbun/sb-emacswiki.el (shimbun-get-headers): Follow the change
	of the URL layout.
	(shimbun-rss-build-message-id): Ditto.

2004-09-01  Hiroaki Irokawa  <irorin@terra.dti.ne.jp>

	* shimbun/sb-vinelinux.el (shimbun-vinelinux-group-path-alist):
	Add errata.3x.i386, errata.3x.ppc and errata.3x.alpha groups.

2004-08-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-itmedia.el (shimbun-itmedia-group-alist): Fetch
	/enterprise/articles/ as well as /news/articles/ in burst group.
	(shimbun-get-headers): Ignore headers if there's no subject.

2004-08-23  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-mark-re-retrieve): Change
	default value for Mew 4.0.66 and later.

2004-08-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release emacs-w3m-1.4.3 from emacs-w3m-1_4 branch.

2004-08-15  Kazuhiro UCHIDA  <kayoujin@yahoo.co.jp>

	* w3m.el (w3m-remove-meta-charset-tags): Check that a content
	field has a valid value before parsing it.

2004-08-12  Romain Francoise  <romain@orebokech.com>

	* w3m.el (w3m-relationship-estimate-rules): Improve regexp for
	Google in order to make the scroll-to-next-page feature work on
	Google Groups as well.

2004-08-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-relationship-estimate-rules): Fix regexp for Google.
	Suggested by Romain Francoise <romain@orebokech.com>.

2004-08-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-cgi-board.el (shimbun-get-headers): Check whether a
	current header has been canceled or not.

2004-08-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi-mytown.el (shimbun-asahi-mytown-get-headers):
	Use shimbun-create-header instead of shimbun-make-header.
	cf. <URL:http://emacs-w3m.namazu.org/ml/msg05438.html>.

	* shimbun/sb-asahi.el (shimbun-asahi-get-headers): Ditto.
	* shimbun/sb-kantei.el (shimbun-get-headers): Ditto.